--- a/Contact.html
+++ b/Contact.html
@@ -114,7 +114,7 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav ml-auto" style="font-family:  'Inter', cursive;font-style: normal; font-size: 20px;">
         <li class="nav-item" style="margin-left: 430px;">   
-          <a class="nav-link" href="12 9.html" style="color:black;">Home</a>
+          <a class="nav-link" href="index.html" style="color:black;">Home</a>
         </li>
         <li class="nav-item" style="margin-left: 200px;">
           <a class="nav-link" href="My work.html"style="color:black;">My works</a>
