--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 
           <div class="col"> 
-              <img src="294899072_1888102374716154_6605994977495291879_n (1).jpg" width="700" height="600" style="padding-left: 100px;">
+              <img src="New folder/294899072_1888102374716154_6605994977495291879_n (1).jpg" width="700" height="600" style="padding-left: 100px;">
           </div>
     </div> 
   </div>
@@ -163,7 +163,7 @@
       
       <div class="col" style="margin-left: 200px; margin-top: 30px;" >
         <br><br><br>
-        <img src="1600w-fADR3u30T2k.webp" width="240" height="239"  >
+        <img src="New folder/1600w-fADR3u30T2k.webp" width="240" height="239"  >
         <br><br>
         <h6 style="margin-left:50px;"> 1. Get motivated </h6><br>
         <h5 style="margin-right: 300px; text-align: center;">The path to pursuing a creative career is always fraught with thorns, so before you start studying Graphic Design, you should identify yourself with a clear source of motivation.
@@ -175,7 +175,7 @@
       <div class="col"  >
         <br>
         <br><br><br>
-        <img src="traits-characteristics-of-a-good-leader-center-for-creative-leadership.jpg" width="240" height="239"  style="margin-left:70px;"  >
+        <img src="New folder/traits-characteristics-of-a-good-leader-center-for-creative-leadership.jpg" width="240" height="239"  style="margin-left:70px;"  >
         <br><br>
         <h6 style="margin-left:110px;"> 2. Having “qualities” </h6><br>
         <h5 style="margin-right: 150px; text-align: center;">“Beautiful drawing” seems to be the most important quality in Graphic Design, but it is not. You will be surprised to know that in addition to hand-drawing, to learn Graphic Design you also need to have the following qualities:Love the pictures and colors, likes “ tinkering” with modern technology, never stop learning.
